P3/ejudge_contests/01/var/archive/xmlreports/0/0/2/000064
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="64" judge-id="1" status="CE" scoring="ACM" run-tests="0" contest-id="301" compile-error="yes" >
  <uuid>a03c0fef-3b7e-4faa-96ca-f6d0537cf6cf</uuid>
  <compiler_output>000064.cpp: In function 'int main()':
000064.cpp:12:15: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i=0;i&lt;s.size();i++){
              ~^~~~~~~~~
000064.cpp:18:2: error: expected ')' before '}' token
  }
  ^
000064.cpp:18:2: error: expected primary-expression before '}' token
</compiler_output>
</testing-report>
